fix img not showing

--- a/src/styles/sass/components/_contact.scss
+++ b/src/styles/sass/components/_contact.scss
@@ -73,7 +73,7 @@
 
       &::after {
         content: "";
-        background: url("/assets/images/icon-error.svg");
+        background: url("assets/images/icon-error.svg");
         background-size: contain;
         width: 20px;
         height: 20px;
